# music163bot-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  config.ini.example  start.sh
.github/workflows/: build.yml
migrations/: 001_create_song_infos.sql
src/: audio_buffer.rs  bot.rs  config.rs  database.rs  database2.rs  error.rs  main.rs  music_api.rs  utils.rs
