[package]
name = "music163bot-rust"
version = "1.0.0"
edition = "2021"
license = "WTFPL"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Telegram bot framework
teloxide = { version = "0.11", default-features = false, features = ["macros", "auto-send", "rustls", "ctrlc_handler"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "stream", "rustls-tls"] }

# URL parsing
url = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }


# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
md5 = "0.7"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.0"

# Crypto for eapi search
cipher = "0.4"
aes = "0.8"
ecb = "0.1"
hex = "0.4"

# Config
config = "0.13"
ini = "1.3"
clap = { version = "4.0", features = ["derive"] }

# File operations
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Audio metadata
id3 = "1.0"

# Image processing
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# FLAC 元数据（写入封面）
metaflac = "0.2"
